--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-en el anterior no aparecian los cuadrados, vamos a usar este html el cual si aparecian, asegurandonos de qque aparezcan y aplicar lo deseado ahora : 
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -87,39 +86,10 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
             margin: 20px 0;
         }
 
-        /* Estilo para los slots */
-        .slots {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-        .slot {
-            width: 50px; /* Ajustar el tamaño del slot */
-            height: 50px; /* Ajustar el tamaño del slot */
-            background-color: #FF4500; /* Color de fondo de los slots */
-            border-radius: 5px;
-            position: relative; /* Para posicionar los elementos internos */
-            display: flex; /* Para centrar la imagen */
-            justify-content: center;
-            align-items: center;
-        }
-
-        .slot img {
-            max-width: 100%; /* Ajustar imagen al slot */
-            max-height: 100%; /* Ajustar imagen al slot */
-        }
-
-        .quantity {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            font-size: 0.7em;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            border-radius: 3px;
-            padding: 2px;
+        /* Estilo para la imagen del ítem */
+        .item-image {
+            max-width: 100px;
+            margin: 10px 0;
         }
     </style>
 </head>
@@ -200,63 +170,6 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
     <div id="kit_list"></div>
     <div id="command_list"></div>
 
-    <div id="simulated_inventory" style="display:none;">
-        <h3>Visual:</h3>
-        <div id="wear_inventory">
-            <h4>Wear:</h4>
-            <div class="slots">
-                <div class="slot" id="wear_slot_1"></div>
-                <div class="slot" id="wear_slot_2"></div>
-                <div class="slot" id="wear_slot_3"></div>
-                <div class="slot" id="wear_slot_4"></div>
-                <div class="slot" id="wear_slot_5"></div>
-                <div class="slot" id="wear_slot_6"></div>
-                <div class="slot" id="wear_slot_7"></div>
-            </div>
-        </div>
-        <div id="main_inventory">
-            <h4>Main:</h4>
-            <div class="slots">
-                <div class="slot" id="main_slot_1"></div>
-                <div class="slot" id="main_slot_2"></div>
-                <div class="slot" id="main_slot_3"></div>
-                <div class="slot" id="main_slot_4"></div>
-                <div class="slot" id="main_slot_5"></div>
-                <div class="slot" id="main_slot_6"></div>
-                <div class="slot" id="main_slot_7"></div>
-                <div class="slot" id="main_slot_8"></div>
-                <div class="slot" id="main_slot_9"></div>
-                <div class="slot" id="main_slot_10"></div>
-                <div class="slot" id="main_slot_11"></div>
-                <div class="slot" id="main_slot_12"></div>
-                <div class="slot" id="main_slot_13"></div>
-                <div class="slot" id="main_slot_14"></div>
-                <div class="slot" id="main_slot_15"></div>
-                <div class="slot" id="main_slot_16"></div>
-                <div class="slot" id="main_slot_17"></div>
-                <div class="slot" id="main_slot_18"></div>
-                <div class="slot" id="main_slot_19"></div>
-                <div class="slot" id="main_slot_20"></div>
-                <div class="slot" id="main_slot_21"></div>
-                <div class="slot" id="main_slot_22"></div>
-                <div class="slot" id="main_slot_23"></div>
-                <div class="slot" id="main_slot_24"></div>
-            </div>
-        </div>
-        <div id="belt_inventory">
-            <h4>Belt:</h4>
-            <div class="slots">
-                <div class="slot" id="belt_slot_1"></div>
-                <div class="slot" id="belt_slot_2"></div>
-                <div class="slot" id="belt_slot_3"></div>
-                <div class="slot" id="belt_slot_4"></div>
-                <div class="slot" id="belt_slot_5"></div>
-                <div class="slot" id="belt_slot_6"></div>
-            </div>
-        </div>
-        <button onclick="hideInventory()">Hide Inventory</button>
-    </div>
-
     <script src="Items.js"></script>
     <script>
         const commands = [];
@@ -329,10 +242,10 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
             predefinedKits.forEach(kit => {
                 const kitItem = document.createElement('div');
                 kitItem.className = 'kit-item';
-                kitItem.innerHTML = 
+                kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <button onclick="showKitDetails('${kit.name}')">Show kit</button>
-                ;
+                `;
                 kitListContainer.appendChild(kitItem);
             });
         }
@@ -346,89 +259,14 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
             if (kit) {
                 const kitDetails = document.createElement('div');
                 kitDetails.className = 'kit-item';
-                kitDetails.innerHTML = 
+                kitDetails.innerHTML = `
                     <strong>${kit.name}</strong>
                     <div>${kit.commands.join('<br>')}</div>
                     <button onclick="copyKits('${kit.name}')">Copy Command</button>
                     <button onclick="toggleKitList()">Hide list</button>
-                    <button onclick="showKitInfo('${kit.name}')">+Info</button> <!-- Botón +Info -->
-                ;
+                `;
                 commandList.appendChild(kitDetails);
             }
-        }
-
-        // Función para mostrar información del kit
-        function showKitInfo(kitName) {
-            const kit = predefinedKits.find(k => k.name === kitName);
-            const inventory = document.getElementById('simulated_inventory');
-
-            // Limpiar slots del inventario antes de mostrar
-            resetInventorySlots();
-
-            if (kit) {
-                kit.commands.forEach(command => {
-                    const parts = command.split('"');
-                    const itemId = parts[1].trim();
-                    const quantity = parseInt(parts[2].trim());
-                    const location = parts[4].trim();
-
-                    updateInventorySlots(location, itemId, quantity);
-                });
-            }
-            inventory.style.display = 'block'; // Mostrar el inventario simulado
-        }
-
-        // Función para actualizar los slots del inventario
-        function updateInventorySlots(location, itemId, quantity) {
-            const slotId = location.toLowerCase() + "_slot_"; // Obtener la parte base del ID
-            let slotsCount;
-            if (location === "Wear") {
-                slotsCount = 7;
-            } else if (location === "Main") {
-                slotsCount = 24;
-            } else if (location === "Belt") {
-                slotsCount = 6;
-            }
-
-            for (let i = 1; i <= slotsCount; i++) {
-                const slotElement = document.getElementById(slotId + i);
-                if (slotElement) {
-                    // Verificar si el slot ya tiene un item
-                    const imgElement = slotElement.querySelector('img');
-                    if (!imgElement) {
-                        // Crear la imagen
-                        const img = document.createElement('img');
-                        img.src = images/${itemId}.png; // Cambiar a la ruta correcta de las imágenes
-                        img.alt = itemId;
-                        slotElement.appendChild(img);
-
-                        // Mostrar la cantidad
-                        const quantityDiv = document.createElement('div');
-                        quantityDiv.className = 'quantity';
-                        quantityDiv.innerText = x${quantity};
-                        slotElement.appendChild(quantityDiv);
-                        break; // Salir del bucle si se coloca el item
-                    } else if (imgElement.alt === itemId) {
-                        // Si el item ya está en el slot, actualizar la cantidad
-                        const existingQuantity = parseInt(imgElement.nextSibling.innerText.replace('x', ''));
-                        imgElement.nextSibling.innerText = x${existingQuantity + quantity}; // Actualizar cantidad
-                        break; // Salir del bucle si se actualiza la cantidad
-                    }
-                }
-            }
-        }
-
-        // Función para reiniciar los slots del inventario
-        function resetInventorySlots() {
-            const slots = document.querySelectorAll('.slot');
-            slots.forEach(slot => {
-                slot.innerHTML = ''; // Limpiar el contenido de cada slot
-            });
-        }
-
-        // Función para ocultar el inventario
-        function hideInventory() {
-            document.getElementById('simulated_inventory').style.display = 'none'; // Ocultar el inventario
         }
 
         // Función para ocultar la lista
@@ -458,7 +296,7 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
             const itemImage = document.getElementById('item_image');
             
             if (selectedItem) {
-                const imageUrl = images/${selectedItem.id}.png;
+                const imageUrl = `images/${selectedItem.id}.png`;
                 itemImage.src = imageUrl;
                 itemImage.style.display = 'block'; // Mostrar la imagen
             } else {
@@ -477,7 +315,7 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
                 return;
             }
 
-            const command = Kit add "${kitName}" "${shortName}" ${quantity} 1 "${location}";
+            const command = `Kit add "${kitName}" "${shortName}" ${quantity} 1 "${location}"`;
             const existingKit = commands.find(kit => kit.name === kitName);
 
             if (existingKit) {
@@ -502,7 +340,7 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
             commands.forEach((kit) => {
                 const kitItem = document.createElement('div');
                 kitItem.className = 'kit-item';
-                kitItem.innerHTML = 
+                kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <div>
                         ${kit.commands.join('<br>')}
@@ -512,7 +350,7 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
                         <button onclick="editKit('${kit.name}')">Edit</button>
                         <button onclick="deleteKit('${kit.name}')">Delete</button>
                     </div>
-                ;
+                `;
                 commandList.appendChild(kitItem);
             });
         }
@@ -544,7 +382,7 @@ en el anterior no aparecian los cuadrados, vamos a usar este html el cual si apa
         }
 
         function deleteKit(kitName) {
-            if (confirm(You are going to delete the entire list from "${kitName}". You're sure?)) {
+            if (confirm(`You are going to delete the entire list from "${kitName}". You're sure?`)) {
                 const kitIndex = commands.findIndex(k => k.name === kitName);
                 if (kitIndex !== -1) {
                     commands.splice(kitIndex, 1); // Borrar el kit del array
